fixed an alignment issue on small screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -91,6 +91,7 @@ a {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  margin: 0 20px 59px 20px;
 }
 
 .story-div {
@@ -170,6 +171,7 @@ input {
 
 .single-story-title {
   font-size: 10vh;
+  text-align: center;
 }
 
 .single-story-synopsis {
